<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mainFragment"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/main_screen" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile_screen" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/settings_screen" />

    <item
        android:id="@+id/notificationsFragment"
        android:icon="@drawable/baseline_notifications_24"
        android:title="@string/notifications_screen" />

    <item
        android:id="@+id/birdFragment"
        android:icon="@drawable/baseline_airplanemode_active_24"
        android:title="@string/bird_screen" />

</menu>